Updated Endless Skies to v1.5.0.0-alpha
  - Added mixingradle as a dependency
  - Implemented functions to set the block hardness and resistance to a block context
  - Implemented functions to set the map color of a block context
  - Cleaned up some classes
  - Implemented functions to add custom items and blocks to a creative tab
  - Added limestone and polished limestone blocks
  - Added a unimplemented creative heater and crude furnace
  - Implemented a framework to more easily hardcode rock crusher recipes
  - Implemented functions to set the name of a block, item, or creative tab
  - Implemented functions to set the name of a block, item, or creative tab in a foreign language/locale
  - Replaced the old data generator tag system with factories that aren't fully implemented yet