@@ -5,7 +5,7 @@ import io.github.notwhiterice.endlessskies.block.factory.data.BlockStateFactory;
 import io.github.notwhiterice.endlessskies.block.factory.data.LootTableFactory;
 import io.github.notwhiterice.endlessskies.datagen.ModLanguageProvider;
 import io.github.notwhiterice.endlessskies.inventory.factory.MenuContext;
-import io.github.notwhiterice.endlessskies.registry.object.ItemLikeContextv2;
+import io.github.notwhiterice.endlessskies.registry.object.ItemLikeContext;
 import io.github.notwhiterice.endlessskies.registry.object.ModContext;
 import net.minecraft.client.gui.screens.MenuScreens;
 import net.minecraft.client.gui.screens.inventory.AbstractContainerScreen;
@@ -13,23 +13,27 @@ import net.minecraft.world.inventory.AbstractContainerMenu;
 import net.minecraft.world.item.BlockItem;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.entity.BlockEntityType;
 import net.minecraft.world.level.block.state.BlockBehaviour;
+import net.minecraft.world.level.material.MapColor;
 import net.minecraftforge.network.IContainerFactory;
 import net.minecraftforge.registries.RegistryObject;
 
 import java.util.*;
 import java.util.function.Supplier;
 
-public class BlockContext extends ItemLikeContextv2<BlockContext, Block> {
+public class BlockContext extends ItemLikeContext<BlockContext, Block> {
     private static final Map<String, List<BlockContext>> instances = new HashMap<>();
 
-    public static final Block.Properties defProp = BlockBehaviour.Properties.ofFullCopy(Blocks.ORANGE_WOOL);
+    public static final Block.Properties newBProp = BlockBehaviour.Properties.of();
 
     private Class<? extends Block> bClass;
     private Block.Properties bProp;
+    private float hardness = 0.0F;
+    private float resistance = 0.0F;
+    private boolean requiresTool = false;
+    private MapColor mapColor = MapColor.NONE;
     private boolean makeItem = true;
     private BlockStateFactory stateFactory = BlockStateFactory.BLOCK_WITHOUT_MODEL;
     private LootTableFactory dropFactory = LootTableFactory.DROP_SELF;
@@ -41,6 +45,10 @@ public class BlockContext extends ItemLikeContextv2<BlockContext, Block> {
     BlockContext(ModContext context, String name) { super(context, name, "BlockContext", instances); }
 
     protected void setStackSize(int size, String src) { super.setStackSize(size, src); }
+    protected void setHardness(float hardness, String src) { onEdit(src); this.hardness = hardness; }
+    protected void setResistance(float resistance, String src) { onEdit(src); this.resistance = resistance; }
+    protected void setMapColor(MapColor color, String src) { onEdit(src); this.mapColor = color; }
+    protected void requiresTool(String src) { onEdit(src); this.requiresTool = true; }
     protected void setClass(Class<? extends Block> block, String src) { onEdit(src); bClass = block; }
     public boolean hasItem() { return makeItem; }
     public boolean hasContainer() { return container != null; }
@@ -68,21 +76,24 @@ public class BlockContext extends ItemLikeContextv2<BlockContext, Block> {
     }
     public RegistryObject<Block> getRegistryObject() {
         if(rObject == null) {
-            if (forcedSupplier != null) rObject = modContext.BLOCKS.register(name, forcedSupplier);
+            if(forcedSupplier != null) rObject = modContext.BLOCKS.register(name, forcedSupplier);
             else {
-                if (bProp == null) bProp = defProp;
-                if (bClass != null) {
+                if(bProp == null) bProp = newBProp;
+                if(hardness != 0.0F || resistance != 0.0F) bProp = bProp.strength(hardness, resistance);
+                if(mapColor != MapColor.NONE) bProp = bProp.mapColor(mapColor);
+                if(requiresTool) bProp = bProp.requiresCorrectToolForDrops();
+                if(bClass != null) {
                     rObject = modContext.BLOCKS.register(name, () -> {
                         try {
-                            if (bProp == defProp)
-                                return bClass.newInstance();
+                            if (bProp == newBProp)
+                                return bClass.getDeclaredConstructor().newInstance();
                             else
                                 return bClass.getDeclaredConstructor(Block.Properties.class)
                                         .newInstance(bProp);
                         } catch (Exception e) { throw new RuntimeException(e); }
                     });
                 } else
-                    rObject = modContext.BLOCKS.register(name, () -> new Block(defProp));
+                    rObject = modContext.BLOCKS.register(name, () -> new Block(newBProp));
             }
             if(makeItem) modContext.ITEMS.register(name, () -> new BlockItem(rObject.get(), new Item.Properties().stacksTo(stackSize)));
         }
@@ -99,10 +110,10 @@ public class BlockContext extends ItemLikeContextv2<BlockContext, Block> {
     }
 
     public static boolean isModKnown(String modID) { return instances.containsKey(modID); }
-    public static boolean doesContextExist(String modID, String name) { return isModKnown(modID) ? (!instances.get(modID).stream().filter(v -> v.getName().equals(name)).toList().isEmpty()) : false; }
-    public static BlockContext getContext(String modID, String name) { return isModKnown(modID) ? (instances.get(modID).stream().filter(v -> v.getName().equals(name)).toList().get(0)) : null; }
+    public static boolean doesContextExist(String modID, String name) { return isModKnown(modID) && (!instances.get(modID).stream().filter(v -> v.getName().equals(name)).toList().isEmpty()); }
+    public static BlockContext getContext(String modID, String name) { return isModKnown(modID) ? (instances.get(modID).stream().filter(v -> v.getName().equals(name)).toList().getFirst()) : null; }
     public static Collection<String> listModBlocks(String modID) { return isModKnown(modID) ? instances.get(modID).stream().map(BlockContext::getID).toList() : Collections.emptyList(); }
     public static Collection<BlockContext> getModBlocks(String modID) { return isModKnown(modID) ? instances.get(modID) : Collections.emptyList(); }
-    public static Collection<String> listAllBlocks() { return instances.values().stream().flatMap(modColl -> modColl.stream()).map(BlockContext::getID).toList(); }
+    public static Collection<String> listAllBlocks() { return instances.values().stream().flatMap(Collection::stream).map(BlockContext::getID).toList(); }
     public static Collection<BlockContext> getAllBlocks() { return instances.values().stream().flatMap(Collection::stream).toList(); }
 }
